--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>RSS Team TA</title>
+<title>RSS Team 16</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -65,7 +65,7 @@ body, html {
       <a href="#about" class="w3-bar-item w3-button">About</a>
       <a href="labs/" class="w3-bar-item w3-button"><i class="fa fa-folder"></i>Labs</a>
       <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="w3-bar-item w3-button"><i class="fa fa-camera"></i>Videos</a>
-      <a href="https://github.com/mit-rss" class="w3-bar-item w3-button"><i class="fa fa-github-square"></i>Github</a>
+      <a href="https://github.com/rss2023-16" class="w3-bar-item w3-button"><i class="fa fa-github-square"></i>Github</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -90,7 +90,7 @@ body, html {
 <!-- Header with full-height image -->
 <header class="title_img w3-display-container w3-grayscale-min" id="home">
   <div class="w3-display-bottommiddle w3-text-white w3-center">
-    <h1>Team TA!</h1>
+    <h1>Team 16</h1>
     <p><a href="https://youtu.be/xLZU6TcSmRo" style="width:100%" class="w3-button w3-white w3-opacity w3-hover-opacity-off">
         Innovation starts somewhere, so why not let it start here?
     </a></p>
@@ -100,36 +100,36 @@ body, html {
 <div class="w3-container w3-white" style="padding:5% 5%">
   <div class="w3-card team_member">
       <img class="headshot" src="img/wall_e.jfif">
-      <h4>Tim Beaver</h4>
-      <p>tbeaver@mit.edu</p>
+      <h4>Lasya Balachandran</h4>
+      <p>lasyab@mit.edu</p>
       <p>These are some template bios; fill this in for each of your team members!
       </p>
   </div>
   <div class="w3-card team_member">
       <img class="headshot" src="img/r2.jpg">
-      <h4>Tim Beaver</h4>
-      <p>tbeaver@mit.edu</p>
+      <h4>Fiona Gillespie</h4>
+      <p>fgillesp@mit.edu</p>
       <p>These are some template bios; fill this in for each of your team members!
       </p>
   </div>
   <div class="w3-card team_member">
       <img class="headshot" src="img/wall_e.jfif">
-      <h4>Tim Beaver</h4>
-      <p>tbeaver@mit.edu</p>
+      <h4>Adrian Gutierrez</h4>
+      <p>adrian02@mit.edu</p>
       <p>These are some template bios; fill this in for each of your team members!
       </p>
   </div>
   <div class="w3-card team_member">
       <img class="headshot" src="img/r2.jpg">
-      <h4>Tim Beaver</h4>
-      <p>tbeaver@mit.edu</p>
+      <h4>Jason Li</h4>
+      <p>jasli@mit.edu</p>
       <p>These are some template bios; fill this in for each of your team members!
       </p>
   </div>
   <div class="w3-card team_member">
       <img class="headshot" src="img/wall_e.jfif">
-      <h4>Tim Beaver</h4>
-      <p>tbeaver@mit.edu</p>
+      <h4>Katherine Lin</h4>
+      <p>klin@mit.edu</p>
       <p>These are some template bios; fill this in for each of your team members!
       </p>
   </div>
