--- a/labs/index.html
+++ b/labs/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>RSS Team TA</title>
+<title>RSS Team 16</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -34,13 +34,13 @@ body, html {
 <!-- MAKE SURE YOU GET THE RELATIVE PATHS RIGHT FOR THE NAV BAR!!!!-->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-card" id="myNavbar">
-    <a href="../#home" class="w3-bar-item w3-button w3-wide">RSS Team TA</a>
+    <a href="../#home" class="w3-bar-item w3-button w3-wide">RSS Team 16</a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="../#about" class="w3-bar-item w3-button">About</a>
       <a href="./" class="w3-bar-item w3-button"><i class="fa fa-folder"></i> Labs</a>
       <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="w3-bar-item w3-button"><i class="fa fa-camera"></i>Videos</a>
-      <a href="https://github.com/mit-rss" class="w3-bar-item w3-button"><i class="fa fa-github-square"></i>Github</a>
+      <a href="https://github.com/rss2023-16" class="w3-bar-item w3-button"><i class="fa fa-github-square"></i>Github</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -79,6 +79,17 @@ body, html {
           <h3><a href="example_lab">Lab 0: Example Lab</h3>
           <p>Example of rendering html and embedding your presentation and report pdf.</p>
           <p><a href="example_lab"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-info-circle"></i> More info</button></a></p>
+        </div>
+      </div>
+    </div>
+    <div class="w3-col l6 m6 w3-margin-bottom" style="margin-top:16px;max-width:50%">
+      <div class="w3-card w3-center" style="min-height:600px">
+        </br>
+        <img src="img/charles.jpg" alt="Survival" style="width:95%" onclick="onClick(this)" class="w3-hover-opacity">
+        <div class="w3-container" style="margin-top:auto">
+          <h3><a href="lab3">Lab 3: Wall-Following on the Racecar</h3>
+          <p>Lorem ipsum dolor sit amet.</p>
+          <p><a href="lab3"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-info-circle"></i> More info</button></a></p>
         </div>
       </div>
     </div>
