Update presentation links

--- a/labs/lab3/index.html
+++ b/labs/lab3/index.html
@@ -77,12 +77,12 @@ body, html {
     <p>You should provide links to your presentation and a way to download your lab report pdf for grading. Please view this index.html file to see how the links, google slides and report pdf were embedded below.</p>
 
     <!-- Inlude links to your presentation and a download of your report pdf: -->
-    <p><a href="https://docs.google.com/presentation/d/1h_3ZTNyov7ng4Jzq9BDFXyGzKKffovH_TYSR2nMy49E/edit?usp=sharing">Link to Presentation</a></p>
+    <p><a href="https://docs.google.com/presentation/d/1Ku9jwsX2urS5qR0g32M9MS6uZsZOb9BTe-T96c0oFVg/edit?usp=sharing">Link to Presentation</a></p>
     <p><a href="../../latex_report/latex_report.pdf" download>Link to Download Lab Report</a></p>
 
     <!-- Inlude your presentation in your site by exporting it via google slides: -->
-    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRpW1Xoe9_g0XDnndzGZCJ7oWnZjtMupPmKlLa4PvGi_4eqlTEPjfyD1P0sq6FPt-flkR9QEF-b5H6f/embed?start=true&loop=true&delayms=3000" frameborder="0" width=95% height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-
+    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTkIPsjs3uBV82ufG8qnJJS2niUXuzivl76ctzNDat5YRvfm8fD7-txr2ui7k-0rMFzpS5YaJh_6cVh/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+    
     <!-- Include a PDF of your lab report here: -->
     <object data="../../latex_report/latex_report.pdf" type="application/pdf" width="720px" height="935px">
       <embed src="../../latex_report/latex_report.pdf">
