--- a/labs/index.html
+++ b/labs/index.html
@@ -71,7 +71,7 @@ body, html {
   <!-- Lab Sections -->
   <div class="w3-row-padding w3-white">
     <!-- Example Lab -->
-    <div class="w3-col l6 m6 w3-margin-bottom" style="margin-top:16px;max-width:50%">
+    <!-- <div class="w3-col l6 m6 w3-margin-bottom" style="margin-top:16px;max-width:50%">
       <div class="w3-card w3-center" style="min-height:600px">
         </br>
         <img src="img/charles.jpg" alt="Survival" style="width:95%" onclick="onClick(this)" class="w3-hover-opacity">
@@ -81,15 +81,26 @@ body, html {
           <p><a href="example_lab"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-info-circle"></i> More info</button></a></p>
         </div>
       </div>
+    </div> -->
+    <div class="w3-col l6 m6 w3-margin-bottom" style="margin-top:16px;max-width:50%">
+      <div class="w3-card w3-center" style="min-height:600px">
+        </br>
+        <img src="img/lidar.jpg" alt="Survival" style="width:95%" onclick="onClick(this)" class="w3-hover-opacity">
+        <div class="w3-container" style="margin-top:auto">
+          <h3><a href="3">Lab 3: Wall-Following on the Racecar</h3>
+          <!-- <p>Lorem ipsum dolor sit amet.</p> -->
+          <p><a href="3"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-info-circle"></i> More info</button></a></p>
+        </div>
+      </div>
     </div>
     <div class="w3-col l6 m6 w3-margin-bottom" style="margin-top:16px;max-width:50%">
       <div class="w3-card w3-center" style="min-height:600px">
         </br>
         <img src="img/charles.jpg" alt="Survival" style="width:95%" onclick="onClick(this)" class="w3-hover-opacity">
         <div class="w3-container" style="margin-top:auto">
-          <h3><a href="3">Lab 3: Wall-Following on the Racecar</h3>
-          <p>Lorem ipsum dolor sit amet.</p>
-          <p><a href="3"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-info-circle"></i> More info</button></a></p>
+          <h3><a href="4">Lab 4: Visual Servoing</h3>
+          <!-- <p>Lorem ipsum dolor sit amet.</p> -->
+          <p><a href="4"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-info-circle"></i> More info</button></a></p>
         </div>
       </div>
     </div>
