--- a/labs/index.html
+++ b/labs/index.html
@@ -85,7 +85,7 @@ body, html {
     <div class="w3-col l6 m6 w3-margin-bottom" style="margin-top:16px;max-width:50%">
       <div class="w3-card w3-center" style="min-height:600px">
         </br>
-        <img src="img/lidar.jpg" alt="Survival" style="width:95%" onclick="onClick(this)" class="w3-hover-opacity">
+        <img src="img/lidar.png" alt="Survival" style="width:95%" onclick="onClick(this)" class="w3-hover-opacity">
         <div class="w3-container" style="margin-top:auto">
           <h3><a href="3">Lab 3: Wall-Following on the Racecar</h3>
           <!-- <p>Lorem ipsum dolor sit amet.</p> -->
