--- a/labs/4/index.html
+++ b/labs/4/index.html
@@ -78,7 +78,7 @@ body, html {
 
     <!-- Inlude links to your presentation and a download of your report pdf: -->
     <p><a href="https://docs.google.com/presentation/d/1_Szo6LzdFnebK5ZZ72fx_aj2vitj_kKCtC4kcEfKal4/edit?usp=sharing">Link to Presentation</a></p>
-    <p><a href="../../latex_report/latex_report.pdf" download>Link to Download Lab Report</a></p>
+    <!-- <p><a href="../../latex_report/latex_report.pdf" download>Link to Download Lab Report</a></p> -->
 
     <!-- Inlude your presentation in your site by exporting it via google slides: -->
     <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vT7HE8iXVYT5vzzTNOyOPH_ijr31_Y4JS7F4Dn_LRvM0chCQkm4ZgQnBZb9cDLrK33mhDukIbjZo284/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
