--- a/index.html
+++ b/index.html
@@ -32,11 +32,15 @@ body, html {
 }
 .team_member p {
   font-size: 10px;
-  font-size: 1.5vw;
+  font-size: 1.4vw;
 }
 .team_member h4 {
   font-size: 20px;
-  font-size: 3vw;
+  font-size: 2.7vw;
+}
+.team_member h5 {
+  font-size: 13px;
+  font-size: 1.55vw;
 }
 
 .headshot {
@@ -81,7 +85,7 @@ body, html {
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close X</a>
   <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">About</a>
   <a href="labs/" onclick="w3_close()" class="w3-bar-item w3-button">Labs</a>
-  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" onclick="w3_close()" class="w3-bar-item w3-button">Videos</a>
+  <a href="videos/" onclick="w3_close()" class="w3-bar-item w3-button">Videos</a>
   <a href="https://github.com/mit-rss" onclick="w3_close()" class="w3-bar-item w3-button">Github</a>
 </nav>
 <!-- End of repeated content on each page-->
@@ -101,36 +105,41 @@ body, html {
   <div class="w3-card team_member">
       <img class="headshot" src="img/wall_e.jfif">
       <h4>Lasya Balachandran</h4>
+      <h5>(sk8 goon)</h5>
       <p>lasyab@mit.edu</p>
-      <p>These are some template bios; fill this in for each of your team members!
+      <p>Course 6-2, Class of 2025
       </p>
   </div>
   <div class="w3-card team_member">
       <img class="headshot" src="img/r2.jpg">
       <h4>Fiona Gillespie</h4>
-      <p>fgillesp@mit.edu</p>
-      <p>These are some template bios; fill this in for each of your team members!
+      <h5>(not new york)</h5>
+      <p>fgillesp@mit.edu</p> 
+      <p>Course 6, MEng
       </p>
   </div>
   <div class="w3-card team_member">
       <img class="headshot" src="img/wall_e.jfif">
       <h4>Adrian Gutierrez</h4>
+      <h5>(long islander wannabe)</h5>
       <p>adrian02@mit.edu</p>
-      <p>These are some template bios; fill this in for each of your team members!
+      <p>Course 16, Class of 2024
       </p>
   </div>
   <div class="w3-card team_member">
       <img class="headshot" src="img/r2.jpg">
-      <h4>Jason Li</h4>
+      <h4>Jason <br>Li</br></h4>
+      <h5>(no nickname)</h5>
       <p>jasli@mit.edu</p>
-      <p>These are some template bios; fill this in for each of your team members!
+      <p>Course 6-9, Class of 2024
       </p>
   </div>
   <div class="w3-card team_member">
       <img class="headshot" src="img/wall_e.jfif">
-      <h4>Katherine Lin</h4>
+      <h4>Katherine <br>Lin</br></h4>
+      <h5>(Hpodw?Askg!)</h5>
       <p>klin@mit.edu</p>
-      <p>These are some template bios; fill this in for each of your team members!
+      <p>Course 6-3, Class of 2025
       </p>
   </div>
 </div>
