--- a/labs/3/index.html
+++ b/labs/3/index.html
@@ -41,7 +41,7 @@ body, html {
     <div class="w3-right w3-hide-small">
       <a href="../../#about" class="w3-bar-item w3-button">About</a>
       <a href="../" class="w3-bar-item w3-button"><i class="fa fa-folder"></i>Labs</a>
-      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="w3-bar-item w3-button"><i class="fa fa-camera"></i>Videos</a>
+      <a href="../../videos/" class="w3-bar-item w3-button"><i class="fa fa-camera"></i>Videos</a>
       <a href="https://github.com/rss2023-16" class="w3-bar-item w3-button"><i class="fa fa-github-square"></i>Github</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
@@ -56,7 +56,7 @@ body, html {
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close X</a>
   <a href="../../#about" onclick="w3_close()" class="w3-bar-item w3-button">About</a>
   <a href="../" onclick="w3_close()" class="w3-bar-item w3-button">Labs</a>
-  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" onclick="w3_close()" class="w3-bar-item w3-button">Videos</a>
+  <a href="../../videos/" onclick="w3_close()" class="w3-bar-item w3-button">Videos</a>
   <a href="https://github.com/rss2023-16" onclick="w3_close()" class="w3-bar-item w3-button">Github</a>
 </nav>
 
@@ -68,7 +68,7 @@ body, html {
 
 <!-- End of repeated content on each page-->
 
-<div class="w3-container w3-black" id="lab-0">
+<div class="w3-container w3-black" id="lab-4">
   <div class="w3-block w3-grey w3-center" style="margin-top:64px">
     <h1>Lab 3: Wall-Following on the Racecar</h1>
   </div>
@@ -103,10 +103,10 @@ body, html {
   </div>
   <div class="w3-col l4 m4">
     <!-- Link this button to the current lab-->
-    <a href="#lab-0" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>  </div>
+    <a href="#lab-3" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>  </div>
   <div class="w3-col l4 m4">
     <!-- Link this button to the next lab-->
-    <a href="../42" class="w3-button w3-light-grey">Next Lab <i class="fa fa-arrow-right w3-margin-right"></i></a>
+    <a href="../4" class="w3-button w3-light-grey">Next Lab <i class="fa fa-arrow-right w3-margin-right"></i></a>
   </div>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
