--- a/labs/5/index.html
+++ b/labs/5/index.html
@@ -26,6 +26,8 @@ body, html {
 .w3-bar .w3-button {
   padding: 16px;
 }
+
+
 </style>
 <!-- THESE ARE SCRIPTS FOR LATEX MATH TO RENDER-->
 <script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$']],displayMath: [['$$','$$']],skipTags: ["script","noscript","style","textarea","code"]},TeX: {equationNumbers: {autoNumber: "AMS"}}});</script>
@@ -56,7 +58,7 @@ body, html {
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close X</a>
   <a href="../../#about" onclick="w3_close()" class="w3-bar-item w3-button">About</a>
   <a href="../" onclick="w3_close()" class="w3-bar-item w3-button">Labs</a>
-  <a href="../../videos/" onclick="w3_close()" class="w3-bar-item w3-button">Videos</a>
+  <a href="../../videos" onclick="w3_close()" class="w3-bar-item w3-button">Videos</a>
   <a href="https://github.com/mit-rss2023-16" onclick="w3_close()" class="w3-bar-item w3-button">Github</a>
 </nav>
 
@@ -68,20 +70,20 @@ body, html {
 
 <!-- End of repeated content on each page-->
 
-<div class="w3-container w3-black" id="lab-4">
+<div class="w3-container w3-black" id="lab-5">
   <div class="w3-block w3-grey w3-center" style="margin-top:64px">
-    <h1>Lab 4: Visual Servoing</h1>
+    <h1>Lab 5: Localization</h1>
   </div>
   <div class="w3-block w3-white" style="padding:16px 16px">
     <!-- <h1>Required: presentation and lab report pdf</h1>
     <p>You should provide links to your presentation and a way to download your lab report pdf for grading. Please view this index.html file to see how the links, google slides and report pdf were embedded below.</p> -->
 
     <!-- Inlude links to your presentation and a download of your report pdf: -->
-    <p><a href="https://docs.google.com/presentation/d/1_Szo6LzdFnebK5ZZ72fx_aj2vitj_kKCtC4kcEfKal4/edit?usp=sharing">Link to Presentation</a></p>
+    <!-- <p><a href="https://docs.google.com/presentation/d/1_Szo6LzdFnebK5ZZ72fx_aj2vitj_kKCtC4kcEfKal4/edit?usp=sharing">Link to Presentation</a></p> -->
     <!-- <p><a href="../../latex_report/latex_report.pdf" download>Link to Download Lab Report</a></p> -->
 
     <!-- Inlude your presentation in your site by exporting it via google slides: -->
-    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vT7HE8iXVYT5vzzTNOyOPH_ijr31_Y4JS7F4Dn_LRvM0chCQkm4ZgQnBZb9cDLrK33mhDukIbjZo284/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+    <!-- <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vT7HE8iXVYT5vzzTNOyOPH_ijr31_Y4JS7F4Dn_LRvM0chCQkm4ZgQnBZb9cDLrK33mhDukIbjZo284/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe> -->
 
     <!-- Include a PDF of your lab report here: -->
     <!-- <object data="../../latex_report/latex_report.pdf" type="application/pdf" width="720px" height="935px">
@@ -101,14 +103,14 @@ body, html {
 <footer class="w3-center w3-black w3-padding-64">
   <div class="w3-col l4 m4">
     <!-- Link this button to the previous lab (lab home if nothing else)-->
-    <a href="../3" class="w3-button w3-light-grey"><i class="fa fa-arrow-left w3-margin-right"></i>Lab Home</a>
+    <a href="../4" class="w3-button w3-light-grey"><i class="fa fa-arrow-left w3-margin-right"></i>Lab Home</a>
   </div>
   <div class="w3-col l4 m4">
     <!-- Link this button to the current lab-->
-    <a href="#lab-4" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>  </div>
+    <a href="#lab-5" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>  </div>
   <div class="w3-col l4 m4">
     <!-- Link this button to the next lab-->
-    <a href="../5" class="w3-button w3-light-grey">Next Lab <i class="fa fa-arrow-right w3-margin-right"></i></a>
+    <a href="../6" class="w3-button w3-light-grey">Next Lab <i class="fa fa-arrow-right w3-margin-right"></i></a>
   </div>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
