--- a/labs/index.html
+++ b/labs/index.html
@@ -26,6 +26,24 @@ body, html {
 .w3-bar .w3-button {
   padding: 16px;
 }
+
+.column {
+  float: left;
+  width: 50%;
+  padding: 5px;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+}
+
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
 </style>
 
 
@@ -39,7 +57,7 @@ body, html {
     <div class="w3-right w3-hide-small">
       <a href="../#about" class="w3-bar-item w3-button">About</a>
       <a href="./" class="w3-bar-item w3-button"><i class="fa fa-folder"></i> Labs</a>
-      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="w3-bar-item w3-button"><i class="fa fa-camera"></i>Videos</a>
+      <a href="../videos" class="w3-bar-item w3-button"><i class="fa fa-camera"></i>Videos</a>
       <a href="https://github.com/rss2023-16" class="w3-bar-item w3-button"><i class="fa fa-github-square"></i>Github</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
@@ -71,25 +89,23 @@ body, html {
   <!-- Lab Sections -->
   <div class="w3-row-padding w3-white">
     <!-- Example Lab -->
-    <!-- <div class="w3-col l6 m6 w3-margin-bottom" style="margin-top:16px;max-width:50%">
-      <div class="w3-card w3-center" style="min-height:600px">
-        </br>
-        <img src="img/charles.jpg" alt="Survival" style="width:95%" onclick="onClick(this)" class="w3-hover-opacity">
-        <div class="w3-container" style="margin-top:auto">
-          <h3><a href="example_lab">Lab 0: Example Lab</h3>
-          <p>Example of rendering html and embedding your presentation and report pdf.</p>
-          <p><a href="example_lab"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-info-circle"></i> More info</button></a></p>
-        </div>
-      </div>
-    </div> -->
     <div class="w3-col l6 m6 w3-margin-bottom" style="margin-top:16px;max-width:50%">
       <div class="w3-card w3-center" style="min-height:600px">
         </br>
-        <img src="img/lidar.png" alt="Survival" style="width:95%" onclick="onClick(this)" class="w3-hover-opacity">
+        <img src="img/lidar.png" alt="Survival" style="width:94.72%" onclick="onClick(this)" class="w3-hover-opacity">
         <div class="w3-container" style="margin-top:auto">
           <h3><a href="3">Lab 3: Wall-Following on the Racecar</h3>
-          <!-- <p>Lorem ipsum dolor sit amet.</p> -->
           <p><a href="3"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-info-circle"></i> More info</button></a></p>
+        </div>
+      </div>
+    </div>
+    <div class="w3-col l6 m6 w3-margin-bottom" style="margin-top:16px;max-width:50%">
+      <div class="w3-card w3-center" style="min-height:600px">
+        </br>
+        <img src="img/orange_line.png" alt="Survival" style="width:95%" onclick="onClick(this)" class="w3-hover-opacity">
+        <div class="w3-container" style="margin-top:auto">
+          <h3><a href="4">Lab 4: Visual Servoing</h3>
+          <p><a href="4"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-info-circle"></i> More info</button></a></p>
         </div>
       </div>
     </div>
@@ -98,12 +114,23 @@ body, html {
         </br>
         <img src="img/johnson_line.png" alt="Survival" style="width:95%" onclick="onClick(this)" class="w3-hover-opacity">
         <div class="w3-container" style="margin-top:auto">
-          <h3><a href="4">Lab 4: Visual Servoing</h3>
-          <!-- <p>Lorem ipsum dolor sit amet.</p> -->
-          <p><a href="4"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-info-circle"></i> More info</button></a></p>
+          <h3><a href="5">Lab 5: Localization</h3>
+          <p><a href="5"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-info-circle"></i> More info</button></a></p>
         </div>
       </div>
     </div>
+
+    <!-- <div class="w3-col l6 m6 w3-margin-bottom" style="margin-top:16px;max-width:50%">
+      <div class="w3-card w3-center" style="min-height:600px">
+        </br>
+        <img src="img/charles.jpg" alt="Survival" style="width:77%" onclick="onClick(this)" class="w3-hover-opacity">
+        <div class="w3-container" style="margin-top:auto">
+          <h3><a href="example_lab">Lab 0: Example Lab</h3>
+          <p>Example of rendering html and embedding your presentation and report pdf.</p>
+          <p><a href="example_lab"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-info-circle"></i> More info</button></a></p>
+        </div>
+      </div>
+    </div> -->
   <!-- end the lab section -->
   </div>
 
