--- a/labs/4/index.html
+++ b/labs/4/index.html
@@ -101,7 +101,7 @@ body, html {
 <footer class="w3-center w3-black w3-padding-64">
   <div class="w3-col l4 m4">
     <!-- Link this button to the previous lab (lab home if nothing else)-->
-    <a href="../3" class="w3-button w3-light-grey"><i class="fa fa-arrow-left w3-margin-right"></i>Lab Home</a>
+    <a href="../3" class="w3-button w3-light-grey"><i class="fa fa-arrow-left w3-margin-right"></i>Previous Lab</a>
   </div>
   <div class="w3-col l4 m4">
     <!-- Link this button to the current lab-->
