--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body, html {
   <div class="w3-card team_member">
       <img class="headshot" src="img/r2.jpg">
       <h4>Jason <br>Li</br></h4>
-      <h5>(no nickname)</h5>
+      <h5>(set nickname)</h5>
       <p>jasli@mit.edu</p>
       <p>Course 6-9, Class of 2024
       </p>
