--- a/labs/5/index.html
+++ b/labs/5/index.html
@@ -38,7 +38,7 @@ body, html {
 <!-- MAKE SURE YOU GET THE RELATIVE PATHS RIGHT FOR THE NAV BAR!!!!-->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-card" id="myNavbar">
-    <a href="../#home" class="w3-bar-item w3-button w3-wide">RSS Team 16</a>
+    <a href="../../#home" class="w3-bar-item w3-button w3-wide">RSS Team 16</a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="../../#about" class="w3-bar-item w3-button">About</a>
@@ -79,11 +79,11 @@ body, html {
     <p>You should provide links to your presentation and a way to download your lab report pdf for grading. Please view this index.html file to see how the links, google slides and report pdf were embedded below.</p> -->
 
     <!-- Inlude links to your presentation and a download of your report pdf: -->
-    <!-- <p><a href="https://docs.google.com/presentation/d/1_Szo6LzdFnebK5ZZ72fx_aj2vitj_kKCtC4kcEfKal4/edit?usp=sharing">Link to Presentation</a></p> -->
+    <p><a href="https://docs.google.com/presentation/d/1-62ullHlOrTutfSv6Ekl5mokSmgZ-2_9oERI-8MRp7Y/edit?usp=sharing">Link to Presentation</a></p>
     <!-- <p><a href="../../latex_report/latex_report.pdf" download>Link to Download Lab Report</a></p> -->
 
     <!-- Inlude your presentation in your site by exporting it via google slides: -->
-    <!-- <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vT7HE8iXVYT5vzzTNOyOPH_ijr31_Y4JS7F4Dn_LRvM0chCQkm4ZgQnBZb9cDLrK33mhDukIbjZo284/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe> -->
+    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTJeWFkXKNj4abEr_8mWCovRInW-19RkFGAlEm1bbt-CjqLM_-ji2Dqb7_iyB9UfPH6keQca8fqGJay/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
     <!-- Include a PDF of your lab report here: -->
     <!-- <object data="../../latex_report/latex_report.pdf" type="application/pdf" width="720px" height="935px">
