--- a/videos/3/index.html
+++ b/videos/3/index.html
@@ -53,7 +53,7 @@ body, html {
 <!-- MAKE SURE YOU GET THE RELATIVE PATHS RIGHT FOR THE NAV BAR!!!!-->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-card" id="myNavbar">
-    <a href="../#home" class="w3-bar-item w3-button w3-wide">RSS Team 16</a>
+    <a href="../../#home" class="w3-bar-item w3-button w3-wide">RSS Team 16</a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="../../#about" class="w3-bar-item w3-button">About</a>
@@ -171,7 +171,7 @@ body, html {
 <footer class="w3-center w3-black w3-padding-64">
   <div class="w3-col l4 m4">
     <!-- Link this button to the previous lab (lab home if nothing else)-->
-    <a href="../" class="w3-button w3-light-grey"><i class="fa fa-arrow-left w3-margin-right"></i>Lab Home</a>
+    <a href="../" class="w3-button w3-light-grey"><i class="fa fa-arrow-left w3-margin-right"></i>Video Home</a>
   </div>
   <div class="w3-col l4 m4">
     <!-- Link this button to the current lab-->
