--- a/labs/6/index.html
+++ b/labs/6/index.html
@@ -80,14 +80,14 @@ body, html {
 
     <!-- Inlude links to your presentation and a download of your report pdf: -->
     <p><a href="https://docs.google.com/presentation/d/1ThpjGgMDizkY_k2wpIakb6TvKQUkoiq8OYe17CProrI/edit?usp=sharing">Link to Presentation</a></p>
-    <p><a href="../../latex_report/RSS_Team_16_Lab_6_Report.pdf" download>Link to Download Lab Report</a></p>
+    <p><a href="../../latex_report/RSS_Team_16_Lab_6_Report (1).pdf" download>Link to Download Lab Report</a></p>
 
     <!-- Inlude your presentation in your site by exporting it via google slides: -->
     <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vREUziy6lnWcveyqRLMyIthahtPj2zqaHne8usjPqcBrRmcWnWYfSILovfhW_V7e4_5cfBQGFedCE1z/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
     <!-- Include a PDF of your lab report here: -->
-    <object data="../../latex_report/RSS_Team_16_Lab_6_Report.pdf" type="application/pdf" width="720px" height="935px">
-      <embed src="../../latex_report/RSS_Team_16_Lab_6_Report.pdf">
+    <object data="../../latex_report/RSS_Team_16_Lab_6_Report (1).pdf" type="application/pdf" width="720px" height="935px">
+      <embed src="../../latex_report/RSS_Team_16_Lab_6_Report (1).pdf">
       </embed>
     </object>
 
